[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Menus/Main/MainMenu.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 750.0
margin_right = -1500.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 370.0
margin_bottom = 280.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStart" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 370.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "New Run"

[node name="ButtonSettings" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 370.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Settings"

[node name="ButtonQuit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 370.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )
text = "Quit"

[connection signal="button_down" from="MarginContainer/VBoxContainer/ButtonStart" to="." method="_on_ButtonStart_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/ButtonSettings" to="." method="_on_ButtonSettings_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_button_down"]
